--- a/compose.yaml
+++ b/compose.yaml
@@ -16,6 +16,8 @@ services:
       context: ./docker/php
     depends_on:
       - ucrm-mysql
+    ports:
+      - 5173:5173
     volumes:
       - ./:/src
       - /src/node_modules
