--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "barryvdh/laravel-debugbar": "^3.15",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9"
     },
